Made an update to the header

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<h1>The Cheeper</h1>
+<header>
+  <title>The Cheeper</title>
+</header>
+<body>
+  <h1>The Cheeper</h1>
+  <h3>The leader of Team Dogez</h3>
+  <p>Welcome to my site. I'm actually kind of new to web development, so this may be glitchy. Me and my team are a group of 
+    mini-game makers</p>
+</body>
