--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/style.css"/>
 <header>
   <title>The Cheeper</title>
 </header>
