--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
   <title>The Cheeper</title>
 </header>
 <body>
+  <div class="heading">
   <h1>The Cheeper</h1>
   <h3>The leader of Team Dogez</h3>
   <p>Welcome to my site. I'm actually kind of new to web development, so this may be glitchy. Me and my team are a group of 
     mini-game makers</p>
+  </div>
 </body>
