--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>The Cheeper</title>
 </header>
 <body>
-  <div class="heading">
+  <div id="header" class="heading">
   <h1>The Cheeper</h1>
   <h3>The leader of Team Dogez</h3>
   <p>Welcome to my site. I'm actually kind of new to web development, so this may be glitchy. Me and my team are a group of 
