--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <link rel="stylesheet" type="text/css" href="style.css">
-<header>
+<head>
   <title>The Cheeper</title>
-</header>
+</head>
 <body>
-  <div id="header" class="heading">
+  <div class="heading">
   <h1>The Cheeper</h1>
   <h3>The leader of Team Dogez</h3>
   <p>Welcome to my site. I'm actually kind of new to web development, so this may be glitchy. Me and my team are a group of 
