--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <div class="heading">
   <h1>The Cheeper</h1>
   <h3>The leader of Team Dogez</h3>
-  <p>Welcome to my site. I'm actually kind of new to web development, so this may be glitchy. Me and my team are a group of 
-    mini-game makers</p>
+  <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.<a href="https://instagram.com/teamdogez"> Instagram</a>
+    <a href="https://discord.gg/A7wZTtJ">Discord</a></p>
   </div>
 </body>
