--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
 <head>
-  <title>The Cheeper</title>
+  <title>RedCrystalSword</title>
 </head>
 <body>
   <div class="heading">
-  <h1>The Cheeper</h1>
+  <h1>RedCrystalSword</h1>
     <br />
   <h3>The leader of Team Dogez</h3>
     <br />
