--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <h3>The leader of Team Dogez</h3>
     <br />
   <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.<a href="https://instagram.com/teamdogez"> Instagram</a>
-    <a href="https://discord.gg/A7wZTtJ">Discord</a></p>
+    <a href="https://discord.gg/A7wZTtJ">Discord</a>
+    <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
 </body>
