--- a/blog.html
+++ b/blog.html
@@ -8,8 +8,12 @@
 <br />
 <br />
 <div class="posts">
-<h4>Welcome to the blog</h4> <b>Published on Feb 10, 2017</b>
+<h2>Welcome to the blog</h2> <b>Published on Feb 10, 2017</b>
 <p>Welcome to the blog guys! So, you might be guessing, why is the Team Dogez blog on
-RedCrystalSword? Well, it's mostly because this is the main Team Dogez site, not just
-mine. Hope you like the blog.</p>
+</p>
+  <br />
+<p>RedCrystalSword? Well, it's mostly because this is the main Team Dogez site, not just
+    </p>
+  <br />
+  <p>mine. Hope you like the blog.</p>
 </div>
