--- a/blog.html
+++ b/blog.html
@@ -1,19 +1,14 @@
-<link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/master/blog.css">
+<link rel="stylesheet" type="text/css" src="blog.css">
 <header>
 <title>Team Dogez Blog</title>
 </header>
 <h1>Team Dogez Blog</h1>
 <h3>The most recent blog posts from Team Dogez</h3>
-<br />
-<br />
-<br />
 <div class="posts">
 <h2>Welcome to the blog</h2> <b>Published on Feb 10, 2017</b>
 <p>Welcome to the blog guys! So, you might be guessing, why is the Team Dogez blog on
 </p>
-  <br />
 <p>RedCrystalSword? Well, it's mostly because this is the main Team Dogez site, not just
     </p>
-  <br />
   <p>mine. Hope you like the blog.</p>
 </div>
