--- a/index.html
+++ b/index.html
@@ -13,4 +13,11 @@
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
     <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
+<div class="footer">
+  <ul>
+    <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
+    <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
+    <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
+  </ul>
+  </div>
 </body>
