--- a/blog.html
+++ b/blog.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" type="text/css" src="blog.css">
+<link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
 <header>
 <title>Team Dogez Blog</title>
 </header>
