--- a/blog.html
+++ b/blog.html
@@ -2,8 +2,12 @@
 <header>
 <title>Team Dogez Blog</title>
 </header>
+<div class="heading">
 <h1>Team Dogez Blog</h1>
 <h3>The most recent blog posts from Team Dogez</h3>
+</div>
+<div class="div">
+</div>
 <div class="posts">
 <h2>Welcome to the blog</h2> <b>Published on Feb 10, 2017</b>
 <p>Welcome to the blog guys! So, you might be guessing, why is the Team Dogez blog on
