--- a/index.html
+++ b/index.html
@@ -9,15 +9,18 @@
     <br />
   <h3>The leader of Team Dogez</h3>
     <br />
-  <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.<a href="https://instagram.com/teamdogez"> Instagram</a>
+    <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.</p>
+    <p><a href="https://instagram.com/teamdogez"> Instagram</a>
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
-    <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
+      <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
-<div class="footer">
+  <nav>
   <ul>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
     <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
   </ul>
-  </div>
+  </nav>
+  
+  
 </body>
