--- a/blog.html
+++ b/blog.html
@@ -16,3 +16,10 @@
     </p>
   <p>mine. Hope you like the blog.</p>
 </div>
+<nav>
+    <ul>
+    <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
+    <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
+    <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
+  </ul>
+</nav>
