--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
       <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
+  <div class="footer">
   <nav>
   <ul>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
@@ -21,6 +22,7 @@
     <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
   </ul>
   </nav>
+  </div>
   
   
 </body>
