--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <meta charset="utf-8">
 <head>
   <title>RedCrystalSword</title>
+  <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/TD.jpg">
 </head>
 <body>
   <div class="heading">
