--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,8 @@
 <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
-<header>
+<head>
 <title>Team Dogez Blog</title>
-</header>
+    <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/TD.jpg">
+</head>
 <div class="heading">
 <h1>Team Dogez Blog</h1>
 <h3>The most recent blog posts from Team Dogez</h3>
