--- a/blog.html
+++ b/blog.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
 <head>
 <title>Team Dogez Blog</title>
-    <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/TD.jpg">
+    <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
 </head>
 <div class="heading">
 <h1>Team Dogez Blog</h1>
