--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <head>
   <title>RedCrystalSword</title>
-  <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/TD.jpg">
+  <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
 </head>
 <body>
   <div class="heading">
@@ -15,11 +15,13 @@
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
       <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
+  <img src="https://github.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
   <div class="footer">
   <nav>
     <br />
     <br />
   <ul>
+    <li>Links</li>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
     <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
