--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <head>
   <title>RedCrystalSword</title>
-  <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
+  <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
 </head>
 <body>
   <div class="heading">
@@ -15,7 +15,7 @@
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
       <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
-  <img src="https://github.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
+  <img src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
   <div class="footer">
   <nav>
     <br />
