--- a/blog.html
+++ b/blog.html
@@ -1,26 +1,23 @@
-<link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
 <head>
-<title>Team Dogez Blog</title>
-    <link rel="icon" type="image/jpg" src="https://github.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
+<title>Blog | RedCrystalSword</title>
+    <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
+    <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
 </head>
 <div class="heading">
-<h1>Team Dogez Blog</h1>
-<h3>The most recent blog posts from Team Dogez</h3>
+    <h1>Team Dogez Blog</h1>
+    <h3>The most recent blog posts from Team Dogez</h3>
+    </div>
+    <div class="posts">
+    <h2>Welcome to the blog</h2> <b>Published on Feb 10, 2017</b>
+
 </div>
-<div class="div">
+<div class="footer">
+    <nav>
+        <ul>
+            <li>Links</li>
+            <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
+            <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
+            <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
+       </ul>
+    </nav>
 </div>
-<div class="posts">
-<h2>Welcome to the blog</h2> <b>Published on Feb 10, 2017</b>
-<p>Welcome to the blog guys! So, you might be guessing, why is the Team Dogez blog on
-</p>
-<p>RedCrystalSword? Well, it's mostly because this is the main Team Dogez site, not just
-    </p>
-  <p>mine. Hope you like the blog.</p>
-</div>
-<nav>
-    <ul>
-    <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
-    <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
-  </ul>
-</nav>
