--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <link rel="stylesheet" type="text/css" href="style.css">
 <meta charset="utf-8">
 <head>
-  <title>RedCrystalSword</title>
+  <title>Home | RedCrystalSword</title>
   <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
 </head>
 <body>
@@ -15,7 +15,8 @@
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
       <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
   </div>
-  <img src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
+  <div class="img">
+  </div>
   <div class="footer">
   <nav>
     <br />
