--- a/blog.html
+++ b/blog.html
@@ -1,6 +1,6 @@
 <head>
 <title>Blog | RedCrystalSword</title>
-    <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/TD.jpg">
+    <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
     <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
 </head>
 <div class="heading">
