--- a/team-dogez.html
+++ b/team-dogez.html
@@ -1,7 +1,7 @@
 <head>
 <title>Team Dogez | RedCrystalSword</title>
     <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/edit/master/blog.css">
+    <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/blog.css">
 </head>
 <div class="heading">
     <h1>Team Dogez</h1>
