--- a/index.html
+++ b/index.html
@@ -13,19 +13,21 @@
     <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.</p>
     <p><a href="https://instagram.com/teamdogez"> Instagram</a>
     <a href="https://discord.gg/A7wZTtJ">Discord</a>
-      <a href="http://thecheeper.github.io/blog.html"> Blog</a></p>
+      <a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></p>
   </div>
   <div class="img">
+    <img src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
   </div>
   <div class="footer">
   <nav>
     <br />
     <br />
-  <ul>
+  <ul>  
     <li>Links</li>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
+    <li><a href="http://redcrystalsword.com/team-dogez.html">Team Dogez</a></li>
+    <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
   </ul>
   </nav>
     <br />
