--- a/team-dogez.html
+++ b/team-dogez.html
@@ -1,7 +1,7 @@
 <head>
 <title>Team Dogez | RedCrystalSword</title>
-    <link rel="icon" type="image/jpg" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
-    <link rel="stylesheet" type="text/css" src="https://github.com/TheCheeper/TheCheeper.github.io/blob/master/blog.css">
+    <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
+    <link rel="stylesheet" type="text/css" href="blog.css">
 </head>
 <div class="heading">
     <h1>Team Dogez</h1>
@@ -19,17 +19,18 @@
     <br />
     <br />
     <p>The reason why our team is named after one of its members, DogezMC_YT, is because we all thought that 'Dogez'
-        sounded and just went with it.</p>
+        sounded good, and just went with it.</p>
 </div>
 <div class="footer">
   <nav>
     <br />
     <br />
-  <ul>
+  <ul>  
     <li>Links</li>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="http://redcrystalsword.com/blog.html">Blog</a></li>
+    <li><a href="http://redcrystalsword.com/team-dogez.html">Team Dogez</a></li>
+    <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
   </ul>
   </nav>
     <br />
@@ -37,3 +38,7 @@
     <br />
     <br />
   </div>
+  
+  
+
+
