--- a/team-dogez.html
+++ b/team-dogez.html
@@ -1,3 +1,4 @@
+<meta charset="utf-8">
 <head>
 <title>Team Dogez | RedCrystalSword</title>
     <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
