--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <meta charset="utf-8">
 <head>
   <title>Home | RedCrystalSword</title>
-  <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
+  <link rel="icon" type="image/ico" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
 </head>
 <body>
   <div class="heading">
