--- a/team-dogez.html
+++ b/team-dogez.html
@@ -1,7 +1,7 @@
 <meta charset="utf-8">
 <head>
 <title>Team Dogez | RedCrystalSword</title>
-    <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon-16x16.png">
+    <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
     <link rel="stylesheet" type="text/css" href="blog.css">
 </head>
 <div class="heading">
