--- a/index.html
+++ b/index.html
@@ -5,31 +5,21 @@
   <link rel="icon" type="image/ico" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
 </head>
 <body>
-  <div class="heading">
-  <h1>RedCrystalSword</h1>
-    <br />
-  <h3>The leader of Team Dogez</h3>
-    <br />
-    <p>Welcome, this is my site. Where I'm going to be having some updates for Team Dogez.</p>
-    <p><a href="https://instagram.com/teamdogez"> Instagram</a>
-    <a href="https://discord.gg/A7wZTtJ">Discord</a>
-      <a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></p>
-  </div>
-  <div class="img">
-    <img src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/RedCrystalSword.jpg"/>
+  <div class="nav">
+    <ul>
+      <li><h1>RedCrystalSword</h1></li>
+      <li><a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></li>
+    </ul>
   </div>
   <div class="footer">
-  <nav>
     <br />
     <br />
   <ul>  
     <li>Links</li>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="http://redcrystalsword.com/team-dogez.html">Team Dogez</a></li>
     <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
   </ul>
-  </nav>
     <br />
     <br />
     <br />
