--- a/index.html
+++ b/index.html
@@ -5,12 +5,21 @@
   <link rel="icon" type="image/ico" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
 </head>
 <body>
+  <div class="container">
   <div class="nav">
     <ul>
       <li><h1>RedCrystalSword</h1></li>
       <li><a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></li>
     </ul>
   </div>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
   <div class="footer">
     <br />
     <br />
@@ -24,6 +33,7 @@
     <br />
     <br />
     <br />
+  </div>
   </div>
   
   
