--- a/team-dogez.html
+++ b/team-dogez.html
@@ -4,11 +4,14 @@
     <link rel="icon" type="image/png" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
     <link rel="stylesheet" type="text/css" href="blog.css">
 </head>
-<div class="heading">
-    <h1>Team Dogez</h1>
-    <h3>A page about Team Dogez</h3>
-</div>
 <div class="container">
+<div class="nav">
+    <ul>
+        <li><h1>RedCrystalSword</h1></li>
+        <li><a href="http://redcrystalsword.com">Home</a></li>
+    </ul>
+</div>
+<div class="desc">
     <p>The reason why I made this page is because I'm leader of Team Dogez. Team Dogez is a MMGG (Minecraft Mini-Game Group). 
     And I have always loved programming, so I decided to use it for some purpose, and made Team Dogez. It's members are: Sparky01, 
     RedCrystalSword, DogezMC_YT, Dangerous_DJ_YT, DarthChimera, HaileyLuvsHorses, loganwii2003, Vampire94937</p>
@@ -23,7 +26,6 @@
         sounded good, and just went with it.</p>
 </div>
 <div class="footer">
-  <nav>
     <br />
     <br />
   <ul>  
@@ -33,12 +35,12 @@
     <li><a href="http://redcrystalsword.com/team-dogez.html">Team Dogez</a></li>
     <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
   </ul>
-  </nav>
     <br />
     <br />
     <br />
     <br />
   </div>
+</div>
   
   
 
