--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <ul>
       <li><h1>RedCrystalSword</h1></li>
       <li><a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></li>
+      <li><a href="https://instagram.com/dogezmc"> DogezMC</a></li>
     </ul>
   </div>
     <br />
