--- a/team-dogez.html
+++ b/team-dogez.html
@@ -7,23 +7,44 @@
 <div class="container">
 <div class="nav">
     <ul>
-        <li><h1>RedCrystalSword</h1></li>
-        <li><a href="http://redcrystalsword.com">Home</a></li>
+      <li><h1>RedCrystalSword</h1></li>
+      <li><a href="http://thecheeper.github.io"> Home</a></li>
+      <li><a href="https://instagram.com/dogezmc"> DogezMC</a></li>
     </ul>
-</div>
+  </div>
 <div class="desc">
     <p>The reason why I made this page is because I'm leader of Team Dogez. Team Dogez is a MMGG (Minecraft Mini-Game Group). 
     And I have always loved programming, so I decided to use it for some purpose, and made Team Dogez. It's members are: Sparky01, 
-    RedCrystalSword, DogezMC_YT, Dangerous_DJ_YT, DarthChimera, HaileyLuvsHorses, loganwii2003, Vampire94937</p>
-    <br />
-    <br />
-    <p>Some of the mini-games we have made are: Dogez-Pocalypse, Dogez Run, Spleef, Ultimate Snowball Fight, and Zombie
+    RedCrystalSword, DogezMC_YT, Dangerous_DJ_YT, DarthChimera, HaileyLuvsHorses, loganwii2003, Vampire94937. We've worked very
+    hard throughout all of the time Team Dogez existed, and even before then some of us we're still together making mini-games
+    Most of the people on Team Dogez are newer players, only having played for 2-3 years. Also most people never knew how
+    commands worked for a long time yet, almost every single Team Dogez game is based on command blocks. So basically:
+    We've embarked on  many quests, learned a whole ton, played way too much Minecraft, and overall become a pretty good
+    team. Some of the mini-games we have made are: Dogez-Pocalypse, Dogez Run, Spleef, Ultimate Snowball Fight, and Zombie
         Apocalypse. We have had most of these mini-games on a Minecraft realm called: Dogez Studios, though it doesn't
-        exist anymore.</p>
+        exist anymore. The reason why our team is named after one of its members, DogezMC_YT, is because we all thought that
+        'Dogez' sounded good, and just went with it.</p>
     <br />
     <br />
-    <p>The reason why our team is named after one of its members, DogezMC_YT, is because we all thought that 'Dogez'
-        sounded good, and just went with it.</p>
+    <p>And now here's a short description of the three main leaders of Team Dogez:</p>
+    <br />
+    <br />
+    <p><b>DogezMC:</b> The original leader of Team Dogez, now second in command you might say, DogezMC is the youngest one of us.
+        If you would ask me, I would say he's pretty good at everything. He has room for improvement in everything, but that's
+        the same with everybody. Some of the mini-games he's helped with are: Spleef, Dogez-Pocalypse, Dogez Run, 
+        Zombie Apocalypse.</p>
+    <br />
+    <br />
+    <p><b>Sparky01:</b> You could call him the third in command, He's contributed more than anyone else on Team Dogez. He
+        Is a command geek. He's the one who got Plagiatus (The creator of Pumkin Party, and a few other mini-games) to join
+        our realm. Sparky is probably the easiest guy to work with on the whole team. He's much more open to change than
+        many other members of it.</p>
+    <br />
+    <br />
+    <p><b>RedCrystalSword (Me):</b> I rose to power, and claimed Team Dogez shortly after it was started, and slowly gained 
+        respect, so now I'm the "leader". 2nd place on the team for knowledge of commands (Sparky being 1st). I learned a lot
+        of my commands from Sethbling, and then later from the Minecraft Forum. I have contributed in every mini-game other 
+        than Ultimate Snowball Fight.</p>
 </div>
 <div class="footer">
     <br />
@@ -32,7 +53,7 @@
     <li>Links</li>
     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="http://redcrystalsword.com/team-dogez.html">Team Dogez</a></li>
+    <li><a href="http://redcrystalsword.com"> Home</a></li>
     <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
   </ul>
     <br />
