--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <li><a href="https://instagram.com/dogezmc"> DogezMC</a></li>
     </ul>
   </div>
+    <div class="img">
     <br />
     <br />
     <br />
@@ -21,6 +22,7 @@
     <br />
     <br />
     <br />
+    </div>
   <div class="footer">
     <br />
     <br />
