--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
   <link rel="icon" type="image/ico" src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
 </head>
 <body>
-  <div class="container">
-  <div class="nav">
+  <div class="heading">
+  <h1>RedCrystalSword</h1>
     <ul>
-      <li><h1>RedCrystalSword</h1></li>
-      <li><a href="http://thecheeper.github.io/team-dogez.html"> Team Dogez</a></li>
-      <li><a href="https://instagram.com/dogezmc"> DogezMC</a></li>
+      <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
+      <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
     </ul>
+  
   </div>
-    <div class="img">
+  <div class="img">
     <br />
     <br />
     <br />
@@ -22,22 +22,42 @@
     <br />
     <br />
     <br />
-    </div>
-  <div class="footer">
     <br />
     <br />
-  <ul>  
-    <li>Links</li>
-    <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
-    <li><a href="https://discord.gg/A7wZTtJ">Discord</a></li>
-    <li><a href="https://www.instagram.com/dogezmc/">DogezMC</a>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <h3>Welcome to my site.</h3>
+    <h4>I am RedCrystalSword</h4>
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+    <br />
+  </div>
+ <div class="footer">
+   <ul>
+     <li><h4>Links</h4></li>
+     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
+     <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
+     <li><a href="https://instagram.com/dogezmc">DogezMC's Instagram</a></li>
+     <li><a href="http://redcrystalsword.com">Home</a></li>
+     <li><h4>Articles</h4>
+     <li><a href="http://redcrystalsword.com/articles/team-dogez.html">Team Dogez</a></li>
   </ul>
-    <br />
-    <br />
-    <br />
-    <br />
   </div>
-  </div>
-  
-  
 </body>
