--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" type="text/css" href="http://redcrystalsword.com/thefiregame/style.css>
+    <link rel="stylesheet" type="text/css" href="http://redcrystalsword.com/thefiregame/style.css">
     <link rel="icon" type="image/ico" href="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
     <title>The Fire Game | RedCrystalSword</title>
     </head>
@@ -17,7 +17,7 @@
         <p>Welcome to The Fire Games young player. You have been chosen to fight in the games with or against your friends.
         You must run from the blazes in order to survive. Use your water bags try to put out the fire. The last player alive wins.
         You can also try to find the hidden Jeffy, complete the parkour, become part of the audience, and much more!</p>
-      </div>
+            </div>
       <div class="footer">
    <ul>
      <li><h4>Links</h4></li>
