--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -27,6 +27,9 @@
      <li><a href="http://redcrystalsword.com">Home</a></li>
      <li><h4>Articles</h4>
      <li><a href="http://redcrystalsword.com/articles/team-dogez.html">Team Dogez</a></li>
+     <li><a href="http:/redcrystalsword.com/articles/about-me.html">About Me</a></li>
+     <li><h4>Mini-Games</h4></li>
   </ul>
   </div>
     </body>
+      </html>
