--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -10,7 +10,7 @@
         <ul>
           <li><h1>RedCrystalSword</h1></li>
           <li><a href="http://redcrystalsword.com">Home</a></li>
-          <li><a href="http://redcrystalsword.com/articles>Articles</a></li">
+          <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
         </ul>
       </div>
       <div class="main">
