--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -1,35 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <link rel="stylesheet" type="text/css" href="http://redcrystalsword.com/thefiregame/style.css">
-    <link rel="icon" type="image/ico" href="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/favicon.ico">
-    <title>The Fire Game | RedCrystalSword</title>
-    </head>
-    <body>
-      <div class="header">
-        <ul>
-          <li><h1>RedCrystalSword</h1></li>
-          <li><a href="http://redcrystalsword.com">Home</a></li>
-          <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
-        </ul>
-      </div>
-      <div class="main">
-        <p>Welcome to The Fire Games young player. You have been chosen to fight in the games with or against your friends.
-        You must run from the blazes in order to survive. Use your water bags try to put out the fire. The last player alive wins.
-        You can also try to find the hidden Jeffy, complete the parkour, become part of the audience, and much more!</p>
-            </div>
-      <div class="footer">
-   <ul>
-     <li><h4>Links</h4></li>
-     <li><a href="https://instagram.com/teamdogez">Instagram</a></li>
-     <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
-     <li><a href="https://instagram.com/dogezmc">DogezMC's Instagram</a></li>
-     <li><a href="http://redcrystalsword.com">Home</a></li>
-     <li><h4>Articles</h4>
-     <li><a href="http://redcrystalsword.com/articles/team-dogez.html">Team Dogez</a></li>
-     <li><a href="http:/redcrystalsword.com/articles/about-me.html">About Me</a></li>
-     <li><h4>Mini-Games</h4></li>
+<head>
+  <title>The Fire Games | RedCrystalSword</title>
+  <meta charset="utf-8"/>
+  <link rel="stylesheet" type="text/css" href="style.css">
+</head>
+
+  <body>
+  <div class="container">
+  <div class="nav">
+  <h3>RedCrystalSword</h3> 
+  <ul>
+    <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
+    <li><a href="http://redcrystalsword.com">Home</a></li>
+    <li><a href="#">Mini-Games</a></li>
+    <li><a href="http://redcrystalsword.com/articles/about-me.html">About</a></li>
   </ul>
   </div>
-    </body>
-      </html>
+    <div class="main">
+      <h1>The</h1>
+      <h2>Fire</h2>
+      <h3>Games</h3>
+  <h4>The game where fire is your best ally, and worst enemy.</h4>
+  <p>Welcome to The Fire Games. Danger, adventure, friendship, battles, blazes, and much more
+    await you.</p>
+<video width="320" height="240"controls>
+  <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
+  </video>
+    </div>
+    </div>
+    </div>       
+</body>
+</html>
