--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -1,34 +1,25 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The Fire Games | RedCrystalSword</title>
-  <meta charset="utf-8"/>
-  <link rel="stylesheet" type="text/css" href="style.css">
-</head>
-
+  <head>
+    <title>The Fire Games | RedCrystalSword</title>
+    <link rel="icon" type="image/ico" href="http://redcrystalsword.com/favicon.ico">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto">
+    <style>
+      .head h4 {
+      color: red;
+      font-family: 'Roboto';
+      border-bottom: 2px round lightGray;
+      background: linear-gradient(-45deg, blue, darkBlue);
+      }
+    </style>
+  </head>
   <body>
-  <div class="container">
-  <div class="nav">
-  <h3>RedCrystalSword</h3> 
-  <ul>
-    <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
-    <li><a href="http://redcrystalsword.com">Home</a></li>
-    <li><a href="#">Mini-Games</a></li>
-    <li><a href="http://redcrystalsword.com/articles/about-me.html">About</a></li>
-  </ul>
-  </div>
-    <div class="main">
-      <h1>The</h1>
-      <h2>Fire</h2>
-      <h3>Games</h3>
-  <h4>The game where fire is your best ally, and worst enemy.</h4>
-  <p>Welcome to The Fire Games. Danger, adventure, friendship, battles, blazes, and much more
-    await you.</p>
-<video width="320" height="240"controls>
-  <source src="https://s3.amazonaws.com/codecademy-content/projects/make-a-website/lesson-1/ollie.mp4" type="video/mp4">
-  </video>
+    <div class="head">
+      <h4>RedCrystalSword</h4>
+      <ul>
+        <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
+        <li><a href="http://redcrystalsword.com">Home</a></li>
+      </ul>
     </div>
-    </div>
-    </div>       
-</body>
+  </body>
 </html>
