--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -9,6 +9,9 @@
       color: red;
       font-family: 'Roboto';
       border-bottom: 2px round lightGray;
+      }
+      
+      .head {
       background: linear-gradient(-45deg, blue, darkBlue);
       }
     </style>
