--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -13,6 +13,7 @@
       
       .head {
       background: linear-gradient(-45deg, blue, darkBlue);
+      border-bottom: 2px solid lightGray;
       }
     </style>
   </head>
