--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -8,18 +8,19 @@
       .head h4 {
       color: red;
       font-family: 'Roboto';
-      border-bottom: 2px round lightGray;
+      border-bottom: 5px round lightGray;
       }
       
       .head {
       background: linear-gradient(-45deg, blue, darkBlue);
       border-bottom: 2px solid lightGray;
+      display: inline;
       }
     </style>
   </head>
   <body>
     <div class="head">
-      <h4>RedCrystalSword</h4>
+      <h1>RedCrystalSword</h1>
       <ul>
         <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
         <li><a href="http://redcrystalsword.com">Home</a></li>
