--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -14,7 +14,7 @@
       .head {
       background: linear-gradient(-45deg, blue, darkBlue);
       border-bottom: 2px solid lightGray;
-      display: inline;
+      float: right;
       }
     </style>
   </head>
