--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto">
     <style>
       .head h4 {
-      color: red;
+      color: linear-gradient(45deg, #CF292C, #F72024);
       font-family: 'Roboto';
       border-bottom: 5px round lightGray;
       }
@@ -14,7 +14,7 @@
       .head {
       background: linear-gradient(-45deg, blue, darkBlue);
       border-bottom: 2px solid lightGray;
-      float: right;
+      text-align: center;
       }
     </style>
   </head>
