--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -3,11 +3,11 @@
   <head>
     <title>The Fire Games | RedCrystalSword</title>
     <link rel="icon" type="image/ico" href="http://redcrystalsword.com/favicon.ico">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto">
+    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Roboto:100">
     <style>
       .head h4 {
       color: #F72024;
-      font-family: 'Roboto';
+      font-family: Roboto;
       border-bottom: 5px round lightGray;
       }
       
@@ -28,6 +28,8 @@
       
       .desc {
       border: 2px solid black;
+      border-radius: 25%;
+      background: linear-gradient(0deg, white, gray;);
       }
     </style>
   </head>
