--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -35,6 +35,10 @@
       .footer-1 {
       color: red;
       }
+      
+      .footer-2 {
+      border-top: 2px solid lightGray;
+      background: linear-gradient(-45deg, gray, darkGray);}
     </style>
   </head>
   <body>
@@ -43,6 +47,8 @@
       <ul>
         <li><a href="http://redcrystalsword.com/articles">Articles</a></li>
         <li><a href="http://redcrystalsword.com">Home</a></li>
+        <li><a href="http://instagram.com/teamdogezleader">Instagram</a></li>
+        <li><a href="http://redcrystalsword.com/mini-games">Mini-Games</a></li>
       </ul>
     </div>
     <div class="desc">
@@ -63,10 +69,11 @@
     <div class="footer-2">
       <ul>
         <li>Articles    Links   Mini-Games</li>
-        <li><a href="http://redcrystalsword.com/articles/team-dogez.html">Team Dogez</a>    <a href="http://instagram.com/dogezmc
-          ">DogezMC</a>   <a href="http://redcrystalsword.com/thefiregame">The Fire Games</a></li>
-        <li><a href="http://redcrystalsword.com/articles/about-me.html">About Me</a>    <a href="http://instagram.com/team
-          dogezleader">Instagram</a></li>
+        <li><a href="http://redcrystalsword.com/articles/team-dogez.html">Team Dogez</a></li>
+        <li><a href="http://redcrystalsword.com/articles/about-me.html">About Me</a>   
+        <li><a href="http://instagram.com/dogezmc">DogezMC</a>
+         <li><a href="http://instagram.com/teamdogezleader">Instagram</a></li>
+        <li><a href="http://redcrystalsword.com/mini-games">Mini-Games</a></li>
       </ul>
     </div>
   </body>
