--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -34,6 +34,7 @@
       
       .footer-1 {
       color: red;
+        text-align: center;
       }
       
       .footer-2 {
@@ -62,7 +63,7 @@
     </div>
     <br />
     <div class="footer-1">
-    <h3>RedCrystalSword</h3>
+      <h3><a href="http://redcrystalsword.com">RedCrystalSword</a></h3>
     </div>
     <br />
     <br />
