--- a/thefiregame/index.html
+++ b/thefiregame/index.html
@@ -32,7 +32,7 @@
       text-align: center;
       }
       
-      .footer-1 {
+      .footer-1 a {
       color: red;
         text-align: center;
       }
