--- a/mini-games/index.html
+++ b/mini-games/index.html
@@ -57,7 +57,7 @@
       <br />
       <h4>A list of all of the Minecraft mini-games I've made.</h4>
       <br />
-      <a href="http://redcrystalsword.com/thefiregame"><img src="https://raw.githubusercontent.com/TheCheeper/TheCheeper.github.io/master/Screenshot%202017-02-24%20at%205.53.04%20PM.png"> </a>
+      <a href="http://redcrystalsword.com/thefiregame">The Fire Games</a>
     </div>
     <br />
     <div class="footer-1">
