--- a/mini-games/index.html
+++ b/mini-games/index.html
@@ -15,6 +15,7 @@
       border-bottom: 2px solid lightGray;
       text-align: center;
       margin-bottom: 20px;
+      float: left;
       }
       
       .desc h4 {
